--- a/0810-BDMusic/Classes/Controller/WYPlayingViewController.xib
+++ b/0810-BDMusic/Classes/Controller/WYPlayingViewController.xib
@@ -77,7 +77,7 @@
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L3K-P2-ig8" userLabel="exit">
-                            <rect key="frame" x="30" y="70" width="41" height="48"/>
+                            <rect key="frame" x="10" y="30" width="41" height="48"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="48" id="clq-de-f4o"/>
                                 <constraint firstAttribute="width" constant="41" id="fnM-Mc-gbh"/>
@@ -90,7 +90,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0mz-We-AWn" userLabel="词图">
-                            <rect key="frame" x="249" y="70" width="41" height="48"/>
+                            <rect key="frame" x="269" y="30" width="41" height="48"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="41" id="GN6-47-OdA"/>
                                 <constraint firstAttribute="height" constant="48" id="vBd-xH-Dsq"/>
@@ -107,19 +107,19 @@
                     <color key="backgroundColor" red="0.80000007149999997" green="0.94901967050000002" blue="0.94901967050000002" alpha="1" colorSpace="deviceRGB"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="BVg-BX-vuR" secondAttribute="bottom" id="2Sb-YA-egp"/>
-                        <constraint firstItem="L3K-P2-ig8" firstAttribute="leading" secondItem="RcE-Se-FKY" secondAttribute="leading" constant="30" id="3GA-tB-QNB"/>
+                        <constraint firstItem="L3K-P2-ig8" firstAttribute="leading" secondItem="RcE-Se-FKY" secondAttribute="leading" constant="10" id="3GA-tB-QNB"/>
                         <constraint firstItem="DCR-xL-Zpf" firstAttribute="top" secondItem="RcE-Se-FKY" secondAttribute="top" id="4yV-lg-3mL"/>
                         <constraint firstAttribute="trailing" secondItem="DCR-xL-Zpf" secondAttribute="trailing" id="G0q-1J-5Vr"/>
-                        <constraint firstAttribute="trailing" secondItem="0mz-We-AWn" secondAttribute="trailing" constant="30" id="IRK-PX-M2u"/>
+                        <constraint firstAttribute="trailing" secondItem="0mz-We-AWn" secondAttribute="trailing" constant="10" id="IRK-PX-M2u"/>
                         <constraint firstAttribute="trailing" secondItem="QUB-JA-lle" secondAttribute="trailing" id="U6h-bY-SNH"/>
                         <constraint firstItem="BVg-BX-vuR" firstAttribute="leading" secondItem="RcE-Se-FKY" secondAttribute="leading" id="VW2-eh-TMi"/>
                         <constraint firstAttribute="bottom" secondItem="DCR-xL-Zpf" secondAttribute="bottom" id="X0O-fp-J8P"/>
                         <constraint firstAttribute="trailing" secondItem="BVg-BX-vuR" secondAttribute="trailing" id="aWQ-GW-Pey"/>
-                        <constraint firstItem="L3K-P2-ig8" firstAttribute="top" secondItem="RcE-Se-FKY" secondAttribute="top" constant="70" id="c2y-Zm-qsM"/>
+                        <constraint firstItem="L3K-P2-ig8" firstAttribute="top" secondItem="RcE-Se-FKY" secondAttribute="top" constant="30" id="c2y-Zm-qsM"/>
                         <constraint firstItem="QUB-JA-lle" firstAttribute="top" secondItem="RcE-Se-FKY" secondAttribute="top" id="iDi-Hm-2IZ"/>
                         <constraint firstAttribute="bottom" secondItem="QUB-JA-lle" secondAttribute="bottom" id="ldw-R6-lik"/>
                         <constraint firstItem="QUB-JA-lle" firstAttribute="leading" secondItem="RcE-Se-FKY" secondAttribute="leading" id="uHN-JE-ihX"/>
-                        <constraint firstItem="0mz-We-AWn" firstAttribute="top" secondItem="RcE-Se-FKY" secondAttribute="top" constant="70" id="wPw-ia-WPM"/>
+                        <constraint firstItem="0mz-We-AWn" firstAttribute="top" secondItem="RcE-Se-FKY" secondAttribute="top" constant="30" id="wPw-ia-WPM"/>
                         <constraint firstItem="DCR-xL-Zpf" firstAttribute="leading" secondItem="RcE-Se-FKY" secondAttribute="leading" id="wes-wE-1s3"/>
                     </constraints>
                 </view>
@@ -181,7 +181,7 @@
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hgl-Sd-pAj" userLabel="进度值">
                                     <rect key="frame" x="0.0" y="0.0" width="20" height="10"/>
-                                    <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="backgroundColor" red="0.2196078598" green="0.76862752440000004" blue="0.9215686917" alpha="1" colorSpace="deviceRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="20" id="Wy2-ei-N57"/>
                                     </constraints>
@@ -244,7 +244,7 @@
                 <constraint firstAttribute="trailing" secondItem="JxJ-kE-2Tb" secondAttribute="trailing" id="Xtt-Iy-j9L"/>
                 <constraint firstAttribute="trailing" secondItem="RcE-Se-FKY" secondAttribute="trailing" id="izp-dR-KVJ"/>
             </constraints>
-            <point key="canvasLocation" x="181" y="345"/>
+            <point key="canvasLocation" x="27" y="414"/>
         </view>
         <tapGestureRecognizer id="e56-RJ-bff">
             <connections>
